Update 2016-12-07-general-command.md